--- a/wp-content/themes/quarkexpeditions/src/front-end/components/two-columns/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/two-columns/style.scss
@@ -7,18 +7,18 @@
 .two-columns {
 	$self: &;
 
-	grid-gap: var(--spacing-5);
+	grid-gap: var(--spacing-6);
 	grid-template-columns: repeat(1, 1fr);
 
 	@media screen and (min-width: grid-size(md)) {
-		grid-gap: calc(var(--spacing-5) * 2);
+		grid-gap: calc(var(--spacing-6) * 2);
 		grid-template-columns: repeat(2, 1fr);
 	}
 
 	&__column {
 
 		> h3 + .section {
-			margin-top: var(--spacing-3);
+			margin-top: var(--spacing-4);
 		}
 	}
 
@@ -44,7 +44,7 @@
 
 			@media screen and (max-width: calc(grid-size(md) - 1px)) {
 				border-top: 1px solid var(--color-gray-30);
-				padding-top: var(--spacing-5);
+				padding-top: var(--spacing-6);
 			}
 		}
 	}
